terraform/vm_linux.tf
resource "azurerm_public_ip" "main" {
  name                = "pip-${var.suffix}"
  location            = var.location
  resource_group_name = azurerm_resource_group.main.name
  allocation_method   = "Static"
  sku                 = "Standard"
  domain_name_label   = var.eveng_fqdn
  tags                = var.tags
}

resource "azurerm_network_interface" "main" {
  name                 = "nic-${var.suffix}"
  enable_ip_forwarding = true
  location             = var.location
  resource_group_name  = azurerm_resource_group.main.name
  tags                 = var.tags

  ip_configuration {
    name                          = "nic-eve-ng"
    subnet_id                     = azurerm_subnet.main.id
    private_ip_address_allocation = "Static"
    private_ip_address            = cidrhost(azurerm_subnet.main.address_prefixes[0], 4)
    public_ip_address_id          = azurerm_public_ip.main.id
    primary                       = true
  }
}

resource "azurerm_network_interface_security_group_association" "main" {
  network_interface_id      = azurerm_network_interface.main.id
  network_security_group_id = azurerm_network_security_group.main.id
}

resource "azurerm_linux_virtual_machine" "main" {
  name                  = "vm-${var.suffix}"
  resource_group_name   = azurerm_resource_group.main.name
  location              = azurerm_resource_group.main.location
  size                  = var.vm_size
  computer_name         = "eve-ng"
  admin_username        = var.admin_username
  network_interface_ids = [azurerm_network_interface.main.id]
  zone                  = "3"
  tags                  = var.tags

  admin_ssh_key {
    username   = var.admin_username
    public_key = azurerm_ssh_public_key.main.public_key
  }

  os_disk {
    caching              = "ReadWrite"
    storage_account_type = "Standard_LRS"
  }

  source_image_reference {
    publisher = "Canonical"
    offer     = "UbuntuServer"
    sku       = "16.04-LTS"
    version   = "latest"
  }
}

resource "azurerm_managed_disk" "main" {
  name                 = "eve-storage"
  location             = var.location
  resource_group_name  = azurerm_resource_group.main.name
  storage_account_type = "Standard_LRS"
  create_option        = "Empty"
  disk_size_gb         = var.disk_size_gb
  zones                = [3]
}

resource "azurerm_virtual_machine_data_disk_attachment" "main" {
  managed_disk_id    = azurerm_managed_disk.main.id
  virtual_machine_id = azurerm_linux_virtual_machine.main.id
  lun                = "0"
  caching            = "ReadWrite"
}
